--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>Página 02 <a href="caso01.html">Caso 2</a></li>
         <li>Página 03 <a href="caso02.html">Caso 3</a></li>
         <li>Página 04 <a href="estructura.html">Estructura 4</a></li>
-        <li>Página 05 <a href="index.html">Index 5</a></li>
+        <li>Página 05 <a href="index.principal.html">Index 5</a></li>
         <li>Página 06 <a href="pagina01.html">Página 6</a></li>
         <li>Página 07 <a href="pagina02.html">Página 7</a></li>
         
